--- a/web/index.html
+++ b/web/index.html
@@ -21062,8 +21062,8 @@ Custom property | Description | Default
         <div>{{greeting}}</div>
         <div secondary="">{{info}}</div>
       </paper-item-body>
-      <paper-icon-button icon="star" alt="favourite this!">
-      </paper-icon-button>
+      <!--<paper-icon-button icon="star" alt="favourite this!">-->
+      <!--</paper-icon-button>-->
     </paper-icon-item>
   </template>
 </dom-module>
