--- a/web/packages/dart_dynamics/pages/vision_api_basic/subs/vision_item.html
+++ b/web/packages/dart_dynamics/pages/vision_api_basic/subs/vision_item.html
@@ -6,8 +6,8 @@
         <div>{{greeting}}</div>
         <div secondary>{{info}}</div>
       </paper-item-body>
-      <paper-icon-button icon="star" alt="favourite this!">
-      </paper-icon-button>
+      <!--<paper-icon-button icon="star" alt="favourite this!">-->
+      <!--</paper-icon-button>-->
     </paper-icon-item>
   </template>
 </dom-module>
