--- a/packages/dart_dynamics/pages/vision_api_basic/subs/vision_item.html
+++ b/packages/dart_dynamics/pages/vision_api_basic/subs/vision_item.html
@@ -10,7 +10,7 @@
         <paper-spinner active></paper-spinner>
         <div secondary class="info"><pre>{{info}}</pre></div>
       </paper-item-body>
-      <paper-icon-button icon="info" >
+      <paper-icon-button icon="info" id="btnDetail">
       </paper-icon-button>
     </paper-item>
   </template>
