- enhanced to display 50 piece of data

--- a/packages/dart_dynamics/pages/vision_api_basic/subs/vision_item.html
+++ b/packages/dart_dynamics/pages/vision_api_basic/subs/vision_item.html
@@ -6,7 +6,7 @@
         <iron-image fade sizing="contain" id="image" class="thumbnail"></iron-image>
       </div>
       <paper-item-body two-line>
-        <div class="infoTitle">Description</div>
+        <div class="infoTitle">Brief Description</div>
         <paper-spinner active></paper-spinner>
         <div secondary class="info"><pre>{{info}}</pre></div>
       </paper-item-body>
