--- a/packages/dart_dynamics/pages/vision_api_basic/vision_api_basic.html
+++ b/packages/dart_dynamics/pages/vision_api_basic/vision_api_basic.html
@@ -28,9 +28,9 @@
             </paper-material>
         </div>
         <paper-dialog id="dialogDetail">
-            <h2>Result JSON</h2>
+            <h2>Data</h2>
             <paper-dialog-scrollable>
-                {{infoDetailData}}
+                <div></div>
             </paper-dialog-scrollable>
             <div class="buttons">
                 <!--<paper-button dialog-dismiss>Cancel</paper-button>-->
