--- a/index.html
+++ b/index.html
@@ -22841,7 +22841,7 @@ Custom property | Description | Default
         <iron-image fade="" sizing="contain" id="image" class="thumbnail"></iron-image>
       </div>
       <paper-item-body two-line="">
-        <div class="infoTitle">Description</div>
+        <div class="infoTitle">Brief Description</div>
         <paper-spinner active=""></paper-spinner>
         <div secondary="" class="info"><pre>{{info}}</pre></div>
       </paper-item-body>
@@ -22880,9 +22880,9 @@ Custom property | Description | Default
             </paper-material>
         </div>
         <paper-dialog id="dialogDetail">
-            <h2>Result JSON</h2>
+            <h2>Data</h2>
             <paper-dialog-scrollable>
-                {{infoDetailData}}
+                <div></div>
             </paper-dialog-scrollable>
             <div class="buttons">
                 <!--<paper-button dialog-dismiss>Cancel</paper-button>-->
