- enhanced ui to put latest upload to first place - open source image

--- a/packages/dart_dynamics/pages/vision_api_basic/subs/vision_item.html
+++ b/packages/dart_dynamics/pages/vision_api_basic/subs/vision_item.html
@@ -4,6 +4,7 @@
     <paper-item>
       <div class="blue">
         <iron-image fade sizing="contain" id="image" class="thumbnail"></iron-image>
+        <div style="text-align: center;">{{fileName}}</div>
       </div>
       <paper-item-body two-line>
         <div class="infoTitle">Brief Description</div>
