--- a/index.html
+++ b/index.html
@@ -22839,6 +22839,7 @@ Custom property | Description | Default
     <paper-item>
       <div class="blue">
         <iron-image fade="" sizing="contain" id="image" class="thumbnail"></iron-image>
+        <div style="text-align: center;">{{fileName}}</div>
       </div>
       <paper-item-body two-line="">
         <div class="infoTitle">Brief Description</div>
