- supported to capture real-time camera image and parse with vision api

--- a/index.html
+++ b/index.html
@@ -22891,7 +22891,25 @@ Custom property | Description | Default
             </div>
         </paper-dialog>
     </template>
-</dom-module><dom-module id="app-demo">
+</dom-module><dom-module id="camera-vision">
+    <link rel="import" type="css" href="packages/dart_dynamics/pages/camera_vision/camera_vision.css">
+    <template>
+        <div class="layout horizontal center-center fit">
+            <paper-card heading="Emmental">
+                <div class="card-content">
+                    <video id="video"></video>
+                    <canvas id="canvas" hidden=""></canvas>
+                </div>
+                <div class="card-actions">
+                    <paper-spinner active=""></paper-spinner>
+                    <div id="vison_result"></div>
+                    <paper-button id="btnCapture">Capture</paper-button>
+                    <paper-button>Explore!</paper-button>
+                </div>
+            </paper-card>
+
+    
+</div></template></dom-module><dom-module id="app-demo">
     <!--<style include="theme"></style>-->
     <link rel="import" type="css" href="packages/dart_dynamics/app/app.css">
     <template>
